# avesnap

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
data/: vernacular_names.parquet
src/: get_common_name_data.py  main.py  test.py  wiki_data.py
