[project]
name = "avesnap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "adlfs>=2026.2.0",
    "boto3>=1.42.49",
    "fsspec>=2026.2.0",
    "gcsfs>=2026.2.0",
    "ipython>=9.10.0",
    "polars[pyarrow]>=1.38.1",
    "prefect>=3.6.18",
    "s3fs>=2026.2.0",
    "streamlit>=1.54.0",
    "tqdm>=4.67.3",
]
